<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/images"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp" >

        <TextView
            android:id="@+id/textViewFormName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/ipformname"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewIPaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewFormName"
            android:layout_marginTop="20dp"
            android:text="@string/ipAddress"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewipServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewIPaddress"
            android:layout_below="@+id/textViewIPaddress"
            android:layout_marginTop="10dp"
            android:text="@string/ipServer"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

      

        <Button
            android:id="@+id/CancleButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/SubmitButton"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/SubmitButton"
            android:background="@drawable/roundedbutton"
            android:text="@string/cancle" />

        <Button
            android:id="@+id/SubmitButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextipServer"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/submit" />

        <EditText
            android:id="@+id/editTextipServer"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_alignLeft="@+id/textViewipServer"
            android:layout_below="@+id/textViewipServer"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/ipServer"
            android:inputType="text"
            android:paddingLeft="15dp" >

            <requestFocus />
        </EditText>

      
    </RelativeLayout>

</ScrollView>