<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/images"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp" >

        <TextView
            android:id="@+id/textViewFormName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/loginformname"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewFormName"
            android:layout_marginTop="50dp"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_alignBaseline="@+id/textViewUserName"
            android:layout_alignBottom="@+id/textViewUserName"
            android:layout_alignLeft="@+id/textViewFormName"
            android:layout_alignParentRight="true"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="15dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextUserName"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_alignBottom="@+id/textViewPassword"
            android:layout_alignLeft="@+id/editTextUserName"
            android:layout_alignParentRight="true"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp" />

        <Button
            android:id="@+id/CancleButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editTextPassword"
            android:layout_marginRight="43dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/cancle" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignBaseline="@+id/CancleButton"
            android:layout_alignBottom="@+id/CancleButton"
            android:layout_marginRight="17dp"
            android:layout_toLeftOf="@+id/CancleButton"
            android:background="@drawable/roundedbutton"
            android:text="@string/login" />
    </RelativeLayout>

</ScrollView>