<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/images"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="422dp" >

        <TextView
            android:id="@+id/textViewFormName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/trafficpoliceformname"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/NewIncidenteButton"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewFormName"
            android:layout_marginTop="26dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/incidente" />

        <ImageView
            android:id="@+id/vehicle_no_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/NewIncidenteButton"
            android:layout_marginTop="26dp"
            android:src="@drawable/ic_launcher" />

        <Button
            android:id="@+id/LogoutButton"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="43dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/logout" />

        <Button
            android:id="@+id/submitIncident"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/vehicle_no_image_view"
            android:layout_marginTop="34dp"
            android:background="@drawable/roundedbutton"
            android:text="Submit" />

        <Button
            android:id="@+id/showIncidentBotton"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/submitIncident"
            android:layout_marginTop="45dp"
            android:background="@drawable/roundedbutton"
            android:text="ShowIncident" />

    </RelativeLayout>

</ScrollView>